--- a/extensions/system/theme/less/uikit/modal.less
+++ b/extensions/system/theme/less/uikit/modal.less
@@ -12,6 +12,8 @@
 
 @modal-dialog-background:                       @global-background;
 
+@modal-dialog-large-width-large:                1150px;
+
 
 // Component
 // ========================================================================
