url picker markup + css cleanup

--- a/extensions/system/theme/less/uikit/form.less
+++ b/extensions/system/theme/less/uikit/form.less
@@ -46,6 +46,7 @@
 @form-large-width:                              400px;
 
 @form-horizontal-label-margin-top:              7px;
+@form-horizontal-controls-text-padding-top:     7px;
 
 @form-icon-width:                               @global-height;
 @form-icon-font-size:                           @global-font-size;
