--- a/extensions/system/assets/css/system.css
+++ b/extensions/system/assets/css/system.css
@@ -58,12 +58,39 @@
 .pk-themes-panel .uk-panel-teaser { position: relative; }
 
 
-/* Marketplace view
+/* Marketplace table template
  ========================================================================== */
-
 
 .pk-marketplace-panel .uk-panel-title { margin-bottom: 15px; }
 .pk-marketplace-panel .uk-overlay-area { border-radius: 2px; }
+
+/* Marketplace details template
+ ========================================================================== */
+
+/*
+ * Position installer buttons
+ */
+
+.uk-modal-dialog.pk-marketplace-modal-dialog { height: 600px; }
+
+@media (max-width: 767px) {
+
+    .uk-modal-dialog.pk-marketplace-modal-dialog {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        width: 100%;
+        height: auto;
+        margin: 10px;
+    }
+
+}
+
+.pk-marketplace-modal-action {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+}
 
 
 /* Dashboard view
