updated menu markup

--- a/extensions/system/assets/css/pagekit.css
+++ b/extensions/system/assets/css/pagekit.css
@@ -74,13 +74,6 @@
 .pk-subnav-icon > li > a:hover { color: #444; }
 
 
-/* Modifier `pk-subnav-muted`
-========================================================================== */
-
-.pk-subnav-muted > li > a { color: #999; }
-.pk-subnav-muted > li > a:hover { color: #444; }
-
-
 /* Sub-modifier `pk-table-subheading`
 ========================================================================== */
 
@@ -183,6 +176,8 @@
  */
 
 .pk-table-fake-header-indent > :first-child { padding-left: 40px; }
+
+.pk-table-fake-header-indent-nested > :first-child { padding-left: 48px; }
 
 /*
  * Make it work with `uk-sortable`
