fixed login + error templates markup for small screens

--- a/extensions/system/theme/less/theme.less
+++ b/extensions/system/theme/less/theme.less
@@ -78,9 +78,10 @@ html { overflow-y: scroll; }
  */
 
 .tm-panel {
-    margin: 20px 0;
-    padding: 25px;
     width: 450px;
+    max-width: ~"calc(100% - 90px)";
+    margin: 20px;
+    padding: 25px;
 }
 
 .tm-panel-small { width: 250px; }
