fixed template updates markup

--- a/extensions/system/assets/css/system.css
+++ b/extensions/system/assets/css/system.css
@@ -20,7 +20,9 @@
 /* Extensions view
  ========================================================================== */
 
-.pk-extensions-margin { margin: 5px !important; }
+.pk-extensions-margin-3 { margin-top: 3px !important; }
+
+.pk-extensions-margin-5 { margin-top: 5px !important; }
 
 
 /* Themes view
