--- a/extensions/system/theme/less/uikit/utility.less
+++ b/extensions/system/theme/less/uikit/utility.less
@@ -41,4 +41,10 @@
 // Miscellaneous
 // ========================================================================
 
-.hook-utility-misc() {}
+.hook-utility-misc() {
+
+    @media (max-width: @breakpoint-small-max) {
+        .uk-container { padding: 0 10px; }
+    }
+
+}
