--- a/extensions/system/theme/less/theme.less
+++ b/extensions/system/theme/less/theme.less
@@ -89,14 +89,13 @@ html { overflow-y: scroll; }
 .tm-height-4-5 { height: 80%; }
 
 /*
- * Panel
+ * Container
  */
 
-.tm-panel {
-    width: 450px;
-    max-width: ~"calc(100% - 90px)";
-    margin: 20px;
-    padding: 25px;
+.tm-container {
+    width: 500px;
+    max-width: ~"calc(100% - 40px)";
+    padding: 20px;
 }
 
-.tm-panel-small { width: 250px; }
+.tm-container-small { width: 300px; }
