Refactored tables and made them responsive

--- a/extensions/system/assets/css/pagekit.css
+++ b/extensions/system/assets/css/pagekit.css
@@ -98,40 +98,37 @@
 ========================================================================== */
 
 /*
- * Useful width classes for tables
+ * Make cell as small as possible
  */
 
 .pk-table-width-minimum { width: 1px; }
 
 /*
- * Fixed width
- * `width` sets the table cell width
- * `max-width` needed to prevent text from expanding cell and to truncate text
+ * Useful width classes for table cells
+ * Text will wrap automatically, a long string will expand the cell
  */
 
-.pk-table-width-100 {
-    max-width: 100px;
-    width: 100px;
-}
-
-.pk-table-width-150 {
-    max-width: 150px;
-    width: 150px;
-}
-
-.pk-table-width-200 {
-    max-width: 200px;
-    width: 200px;
-}
+.pk-table-width-100 { width: 100px; }
+.pk-table-width-150 { width: 150px; }
+.pk-table-width-200 { width: 200px; }
 
 /*
- * Max width
- * Only useful to truncate text
+ * Prevent a long string from expanding the cell
+ * `min-width` is needed to prevent cells from collapsing
+ */
+
+.pk-table-text-break { word-break: break-word; }
+
+.pk-table-min-width-100 { min-width: 100px; }
+.pk-table-min-width-150 { min-width: 150px; }
+.pk-table-min-width-200 { min-width: 200px; }
+.pk-table-min-width-300 { min-width: 300px; }
+
+/*
+ * Need when `uk-text-truncate` is used
  */
 
 .pk-table-max-width-100 { max-width: 100px; }
-.pk-table-max-width-150 { max-width: 150px; }
-.pk-table-max-width-200 { max-width: 200px; }
 
 
 /* Sub-modifier `pk-table-head-sticky`
@@ -304,7 +301,13 @@
 .pk-finder-icon-file { color: #aaa; }
 
 /*
- * Sub-object `pk-thumbnail`
+ * Modifier `pk-finder-table`
+ */
+
+.pk-finder-table td:nth-child(2) { padding-right: 0; }
+
+/*
+ * Sub-object `pk-finder-thumbnail`
  */
 
 .pk-finder-thumbnail {
@@ -337,8 +340,6 @@
     background-size: contain;
     vertical-align: middle;
 }
-
-.pk-finder-thumbnail-table + span { vertical-align: middle; }
 
 /*
  * Sub-modifier `pk-finder-subnav`
