--- a/extensions/system/theme/less/theme.less
+++ b/extensions/system/theme/less/theme.less
@@ -79,7 +79,8 @@ html { overflow-y: scroll; }
 
 }
 
-/* Dialog pages like login and error
+
+/* Pages for login, error, etc
  ========================================================================== */
 
 /*
