updated admin uikit theme

--- a/extensions/system/theme/less/uikit.less
+++ b/extensions/system/theme/less/uikit.less
@@ -1,4 +1,4 @@
-// Default
+// UIkit
 // ========================================================================
 
 @import "../../../../vendor/assets/uikit/less/uikit.less";
@@ -42,7 +42,6 @@
 @import "uikit/thumbnail.less";
 @import "uikit/overlay.less";
 @import "uikit/progress.less";
-@import "uikit/search.less";
 
 // JavaScript
 @import "uikit/dropdown.less";
@@ -55,14 +54,33 @@
 @import "uikit/utility.less";
 
 
-// Addons
+// Add-ons
 // ========================================================================
 
-@import "uikit/addon.datepicker.less";
-@import "uikit/addon.sortable.less";
-@import "../../../../vendor/assets/uikit/less/addons/form-file.less";
-@import "uikit/addon.form-password.less";
-@import "uikit/addon.markdownarea.less";
-@import "uikit/addon.notify.less";
-@import "uikit/addon.sticky.less";
-@import "../../../../vendor/assets/uikit/less/addons/placeholder.less";
+// Common
+@import "./../../../vendor/assets/uikit/less/addons/form-file.less";
+@import "./../../../vendor/assets/uikit/less/addons/form-password.less";
+@import "./../../../vendor/assets/uikit/less/addons/placeholder.less";
+
+// JavaScript
+@import "./../../../vendor/assets/uikit/less/addons/autocomplete.less";
+@import "./../../../vendor/assets/uikit/less/addons/datepicker.less";
+@import "./../../../vendor/assets/uikit/less/addons/markdownarea.less";
+@import "./../../../vendor/assets/uikit/less/addons/notify.less";
+@import "./../../../vendor/assets/uikit/less/addons/sortable.less";
+@import "./../../../vendor/assets/uikit/less/addons/sticky.less";
+@import "./../../../vendor/assets/uikit/less/addons/upload.less";
+
+
+// Add-ons theme
+// ========================================================================
+
+// Common
+@import "uikit/addons/form-password.less";
+
+// JavaScript
+@import "uikit/addons/datepicker.less";
+@import "uikit/addons/markdownarea.less";
+@import "uikit/addons/notify.less";
+@import "uikit/addons/sortable.less";
+@import "uikit/addons/sticky.less";
