--- a/extensions/system/theme/less/uikit/article.less
+++ b/extensions/system/theme/less/uikit/article.less
@@ -11,6 +11,7 @@
 
 @article-title-font-size:                       round(@global-font-size * 2.57); // 36px
 @article-title-line-height:                     round(@article-title-font-size * 1.16); // 42px
+@article-title-font-weight:                     300;
 
 @article-meta-font-size:                        round(@global-font-size * 0.85); // 12px
 @article-meta-line-height:                      round(@article-meta-font-size * 1.5); // 18px
