--- a/extensions/system/theme/less/uikit/addons/markdownarea.less
+++ b/extensions/system/theme/less/uikit/addons/markdownarea.less
@@ -1,10 +1,7 @@
 //
-// Addon: Markdown area
+// Component: Markdown area
 //
 // ========================================================================
-
-@import "../../../../vendor/assets/uikit/less/addons/markdownarea.less";
-@import "variables.less";
 
 
 // Variables
@@ -39,7 +36,7 @@
 @markdown-navbar-nav-onclick-border-top:        rgba(0,0,0,0.2);
 
 
-// Hooks
+// Component
 // ========================================================================
 
 
@@ -89,43 +86,47 @@
 }
 
 
-// Rules
+// Miscellaneous
 // ========================================================================
 
-/*
- * Apply same `border-radius` as `uk-markdownarea-navbar`
- */
+.hook-markdownarea-misc() {
 
-.uk-markdownarea-navbar-nav:first-child > li:first-child > a { border-top-left-radius: @global-border-radius; }
+    /*
+     * Apply same `border-radius` as `uk-markdownarea-navbar`
+     */
 
-/*
- * Sub-modifier `uk-markdownarea-navbar-flip`
- */
+    .uk-markdownarea-navbar-nav:first-child > li:first-child > a { border-top-left-radius: @global-border-radius; }
 
-/* Collapse border */
-.uk-markdownarea-navbar-flip .uk-markdownarea-navbar-nav > li > a {
-    margin-left: 0;
-    margin-right: -1px;
+    /*
+     * Sub-modifier `uk-markdownarea-navbar-flip`
+     */
+
+    /* Collapse border */
+    .uk-markdownarea-navbar-flip .uk-markdownarea-navbar-nav > li > a {
+        margin-left: 0;
+        margin-right: -1px;
+    }
+
+    /* Apply same `border-radius` as `uk-markdownarea-navbar` */
+    .uk-markdownarea-navbar-flip .uk-markdownarea-navbar-nav:first-child > li:first-child > a { border-top-left-radius: 0; }
+    .uk-markdownarea-navbar-flip .uk-markdownarea-navbar-nav:last-child > li:last-child > a { border-top-right-radius: @global-border-radius; }
+
+    /*
+     * Sub-modifier `uk-markdownarea-fullscreen`
+     */
+
+    .uk-markdownarea-fullscreen .uk-markdownarea-navbar {
+        border-top: none;
+        border-left: none;
+        border-right: none;
+        border-radius: 0;
+    }
+
+    .uk-markdownarea-fullscreen .uk-markdownarea-content {
+        border: none;
+        border-radius: 0;
+    }
+
+    .uk-markdownarea-fullscreen .uk-markdownarea-navbar-nav > li > a { border-radius: 0 !important; }
+
 }
-
-/* Apply same `border-radius` as `uk-markdownarea-navbar` */
-.uk-markdownarea-navbar-flip .uk-markdownarea-navbar-nav:first-child > li:first-child > a { border-top-left-radius: 0; }
-.uk-markdownarea-navbar-flip .uk-markdownarea-navbar-nav:last-child > li:last-child > a { border-top-right-radius: @global-border-radius; }
-
-/*
- * Sub-modifier `uk-markdownarea-fullscreen`
- */
-
-.uk-markdownarea-fullscreen .uk-markdownarea-navbar {
-    border-top: none;
-    border-left: none;
-    border-right: none;
-    border-radius: 0;
-}
-
-.uk-markdownarea-fullscreen .uk-markdownarea-content {
-    border: none;
-    border-radius: 0;
-}
-
-.uk-markdownarea-fullscreen .uk-markdownarea-navbar-nav > li > a { border-radius: 0 !important; }
