--- a/extensions/system/theme/less/uikit/addons/notify.less
+++ b/extensions/system/theme/less/uikit/addons/notify.less
@@ -1,10 +1,7 @@
 //
-// Addon: Notify
+// Component: Notify
 //
 // ========================================================================
-
-@import "../../../../vendor/assets/uikit/less/addons/notify.less";
-@import "variables.less";
 
 
 // Variables
@@ -32,7 +29,7 @@
 @notify-message-danger-color:                   #f0615b;
 
 
-// Hooks
+// Component
 // ========================================================================
 
 .hook-notify() {}
@@ -49,3 +46,9 @@
 .hook-notify-message-warning() {}
 
 .hook-notify-message-danger() {}
+
+
+// Miscellaneous
+// ========================================================================
+
+.hook-notify-misc() {}
