updated alpha uikit theme

--- a/themes/alpha/less/uikit.less
+++ b/themes/alpha/less/uikit.less
@@ -42,7 +42,6 @@
 @import "uikit/thumbnail.less";
 @import "uikit/overlay.less";
 @import "uikit/progress.less";
-@import "uikit/search.less";
 
 // JavaScript
 @import "uikit/dropdown.less";
@@ -53,3 +52,10 @@
 // Need to be loaded last
 @import "uikit/text.less";
 @import "uikit/utility.less";
+
+
+// Add-ons
+// ========================================================================
+
+@import "../../../vendor/assets/uikit/less/addons/search.less";
+@import "uikit/addons/search.less";
