--- a/themes/alpha/less/uikit/uikit.less
+++ b/themes/alpha/less/uikit/uikit.less
@@ -1,4 +1,4 @@
-// Default
+// UIkit
 // ========================================================================
 
 @import "../../../../vendor/assets/uikit/less/uikit.less";
