--- a/extensions/system/theme/less/uikit/uikit.less
+++ b/extensions/system/theme/less/uikit/uikit.less
@@ -65,7 +65,7 @@
 // JavaScript
 @import "./../../../../vendor/assets/uikit/less/addons/autocomplete.less";
 @import "./../../../../vendor/assets/uikit/less/addons/datepicker.less";
-@import "./../../../../vendor/assets/uikit/less/addons/markdownarea.less";
+@import "./../../../../vendor/assets/uikit/less/addons/htmleditor.less";
 @import "./../../../../vendor/assets/uikit/less/addons/notify.less";
 @import "./../../../../vendor/assets/uikit/less/addons/sortable.less";
 @import "./../../../../vendor/assets/uikit/less/addons/sticky.less";
@@ -80,7 +80,7 @@
 
 // JavaScript
 @import "addons/datepicker.less";
-@import "addons/markdownarea.less";
+@import "addons/htmleditor.less";
 @import "addons/notify.less";
 @import "addons/sortable.less";
 @import "addons/sticky.less";
